web-server-infra/NAT_GW.tf
#nat_gw

resource "aws_eip" "nat" {
  vpc = "true"
}

resource "aws_nat_gateway" "nat-gw" {
  allocation_id = "${aws_eip.nat.id}"
  subnet_id     = "${aws_subnet.PUBLIC_SUB_BUDWELL_LAB_0.id}"
  depends_on    = [aws_internet_gateway.INTERNET_GW]
}

#VPC setup for NAT

resource "aws_route_table" "main-private" {
  vpc_id = "${aws_vpc.BUDWELL_LAB_VPC.id}"
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = "${aws_nat_gateway.nat-gw.id}"
  }

}


#Route associations private
resource "aws_route_table_association" "main-private-2a" {
  subnet_id      = "${aws_subnet.PRIVATE_SUB_BUDWELL_LAB_0.id}"
  route_table_id = "${aws_route_table.main-private.id}"
}
